--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -6,6 +6,12 @@ jobs:
     name: Build and publish Python 🐍 distributions 📦 to PyPI and TestPyPI
     runs-on: ubuntu-18.04
     steps:
+    - name: checkcode
+      uses : actions/checkout@v2
+      
+    - name: run super linter
+      uses : actions/super-linter@v3
+      
     - uses: actions/checkout@master
     - name: Set up Python 3.9
       uses: actions/setup-python@v1
