--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -23,8 +23,20 @@ jobs:
     - name: Run unit tests
       run: |
         python test_application.py
-#    - name: Publish distribution 📦 to PyPI
-#      if: startsWith(github.ref, 'refs/tags')
-#      uses: pypa/gh-action-pypi-publish@master
-#      with:
-#        password: ${{ secrets.PYPI_API_TOKEN }}
+    - name: git congig
+      run: |
+        git config --global user.email "kdsuriya11.4@gmail.com"
+        git config --global user.name "suriya1410"
+    - name: login to git
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ github.GITHUB_TOKEN }}
+      
+    - name: Publish distribution 📦 to PyPI
+      if: startsWith(github.ref, 'refs/tags')
+      uses: pypa/gh-action-pypi-publish@master
+      with:
+        password: ${{ secrets.PYPI_API_TOKEN }}
+
