--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -31,8 +31,8 @@ jobs:
       uses: docker/login-action@v1
       with:
         registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ github.GITHUB_TOKEN }}
+        username: "suriya1410"
+        password: "Suriya@1410"
       
     - name: Publish distribution 📦 to PyPI
       if: startsWith(github.ref, 'refs/tags')
