--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -16,8 +16,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install build
+          pip install -r requirements.txt
+
       - name: Build package
-        run: python -m build
+        run: test_application.py
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
         with:
